# reminder-bot

./: .dockerignore  .gitignore  .gitmodules  README.md  create.sql  docker-compose.yml  main.py  models.py  passers.py  pm2.config.json  pyproject.toml
docker/: Dockerfile
docker/client/: Dockerfile  run.sh
docker/db/: Dockerfile
docker/postman/: Dockerfile  run.sh
migration/: drop_all_tables
