[tool.poetry]
name = "reminder-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.6 || ~3.7"
dateparser = "^0.7.2"
sqlalchemy = "^1.3.13"
pytz = "^2019.3"
"discord.py" = "^1.3.0a"
pymysql = "^0.9.3"

[tool.poetry.dev-dependencies]
Mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
